build_log.txt

> Configure project :
Fabric Loom: 1.14.7

> Task :compileJava FAILED
E:\Minecraft Project\Vanilla Outsider Collections\Bat_Ecology\src\main\java\com\vanillaoutsider\batecology\spawn\BatSpawningLogic.java:3: error: cannot find symbol
import com.vanillaoutsider.batecology.mixin.BatEcologyEntity;
                                           ^
  symbol:   class BatEcologyEntity
  location: package com.vanillaoutsider.batecology.mixin
E:\Minecraft Project\Vanilla Outsider Collections\Bat_Ecology\src\main\java\com\vanillaoutsider\batecology\BatEcologyMod.java:20: error: method createDefaulted in class AttachmentRegistry cannot be applied to given types;
    public static final AttachmentType<Integer> COLONY_ID_ATTACHMENT = AttachmentRegistry.createDefaulted(
                                                                                         ^
  required: Identifier,Supplier<A>
  found:    Identifier,int
  reason: cannot infer type-variable(s) A
    (argument mismatch; int cannot be converted to Supplier<A>)
  where A is a type-variable:
    A extends Object declared in method <A>createDefaulted(Identifier,Supplier<A>)
E:\Minecraft Project\Vanilla Outsider Collections\Bat_Ecology\src\main\java\com\vanillaoutsider\batecology\BatEcologyMod.java:30: error: cannot find symbol
        AttachmentRegistry.register(COLONY_ID_ATTACHMENT);
                          ^
  symbol:   method register(AttachmentType<Integer>)
  location: class AttachmentRegistry
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

[Incubating] Problems report is available at: file:///E:/Minecraft%20Project/Vanilla%20Outsider%20Collections/Bat_Ecology/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  E:\Minecraft Project\Vanilla Outsider Collections\Bat_Ecology\src\main\java\com\vanillaoutsider\batecology\BatEcologyMod.java:20: error: method createDefaulted in class AttachmentRegistry cannot be applied to given types;
      public static final AttachmentType<Integer> COLONY_ID_ATTACHMENT = AttachmentRegistry.createDefaulted(
                                                                                           ^
    required: Identifier,Supplier<A>
    found:    Identifier,int
    reason: cannot infer type-variable(s) A
      (argument mismatch; int cannot be converted to Supplier<A>)
    where A is a type-variable:
      A extends Object declared in method <A>createDefaulted(Identifier,Supplier<A>)
  Note: Recompile with -Xlint:deprecation for details.
  E:\Minecraft Project\Vanilla Outsider Collections\Bat_Ecology\src\main\java\com\vanillaoutsider\batecology\spawn\BatSpawningLogic.java:3: error: cannot find symbol
  import com.vanillaoutsider.batecology.mixin.BatEcologyEntity;
                                             ^
    symbol:   class BatEcologyEntity
    location: package com.vanillaoutsider.batecology.mixin
  Note: Some input files use or override a deprecated API.
  E:\Minecraft Project\Vanilla Outsider Collections\Bat_Ecology\src\main\java\com\vanillaoutsider\batecology\BatEcologyMod.java:30: error: cannot find symbol
          AttachmentRegistry.register(COLONY_ID_ATTACHMENT);
                            ^
    symbol:   method register(AttachmentType<Integer>)
    location: class AttachmentRegistry
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
1 actionable task: 1 executed
